# b2sum-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
