[package]
name = "b2sum"
version = "0.3.0"
authors = ["John Downey <jdowney@gmail.com>"]
description = "Rust clone of the BLAKE2b checksum utility in GNU coreutils"
repository = "https://github.com/jtdowney/b2sum-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
blake2b_simd = "0.5.2"
docopt = "1.1.0"
error-chain = "0.12.1"
serde = { version = "1.0.92", features = ["derive"] }
