[package]
name = "b2sum"
version = "0.4.0"
authors = ["John Downey <jdowney@gmail.com>"]
description = "Rust clone of the BLAKE2b checksum utility in GNU coreutils"
repository = "https://github.com/jtdowney/b2sum-rs"
readme = "README.md"
license = "MIT"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
blake2b_simd = "0.5.11"
docopt = "1.1.1"
eyre = "0.6.5"
serde = "1.0.130"
stable-eyre = "0.2.2"
